# mcpquick

./: .env  .env.dev  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: lint.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  dashboard.py  deps.py  runs.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  run.py  user.py
backend/app/sandbox/: __init__.py  contracts.py  heuristics.py  http_client.py  nix_runner.py  provider_clients.py  runtime_entry.py
backend/app/schemas/: __init__.py  auth.py  dashboard.py  run.py
backend/app/services/: __init__.py  api_keys.py  run_failures.py  run_logs.py  run_presenters.py  sandbox.py  scoring.py  security.py
backend/app/workers/: __init__.py  run_worker.py
backend/migrations/: env.py
backend/migrations/versions/: 20260328_0001_create_run_tables.py  20260417_0002_add_users_and_run_ownership.py
backend/sandbox-nix/: flake.nix
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  constants.js  index.css
frontend/src/api/: authApi.js  client.js  dashboardApi.js  runsApi.js
frontend/src/components/: AppLayout.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useBackendHealth.js
frontend/src/pages/: AuthPage.jsx  DashboardPage.jsx  NewRunPage.jsx  NotFoundPage.jsx  ProfilePage.jsx  RunDetailsPage.jsx  RunsPage.jsx
scripts/: run.sh  start_db.sh
(+1 files in other folders)
