[project]
name = "ywhealth"
version = "0.1.0"
description = ""
authors = [
    {name = "Yashar Najafi"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "sqlalchemy[asyncio] (>=2.0.46,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "openai (>=1.0.0,<2.0.0)",
    "anthropic (>=0.40.0,<1.0.0)",
    "google-generativeai (>=0.8.0,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "25.1.0"
isort = "6.0.1"
flake8 = "7.1.2"
uvicorn = {version = "^0.40.0", extras = ["standard"]}

[tool.poetry]
package-mode = false

[tool.isort]
profile = "black"
